tests/ui/const-generics/defaults/default-on-impl.stderr
error: defaults for generic parameters are not allowed here
  --> $DIR/default-on-impl.rs:3:6
   |
LL | impl<const N: usize = 1> Foo<N> {}
   |      ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

